<resources>
    <string name="app_name">LetMeKnow</string>
    <string name="tab_notification">未读通知</string>
    <string name="tab_send">已发通知</string>
    <string name="tab_read">已读通知</string>
    <string name="tab_circle">圈子</string>
    <string name="tab_pm">私信</string>
    <string name="drawer_profile">个人资料</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_about">关于Letmeknow</string>

    <string name="notification_edit_title">新的通知</string>

    <string name="setting_title">设置</string>
    <string name="edit_titile">编辑新通知</string>
    <string name="select_circle">选择圈子</string>
    <string name="confirm_select">确认</string>
    <string name="select_members">选择成员</string>
    <string name="send_notification">发送通知</string>

    <string name="notification_title">通知详情</string>
    <string name="notification_delete">删除通知</string>
    <string name="notification_confirm">确认收到</string>

    <string name="user_info_title">个人信息</string>
    <string name="user_info_portrait">头像</string>
    <string name="user_info_username">用户名</string>
    <string name="user_info_name">姓名</string>
    <string name="user_info_phone">电话号码</string>
    <string name="user_info_email">邮箱账号</string>
    <string name="user_info_logoff">退出登录</string>

    <string name="searchbar_hint">搜索圈子</string>

    <string name="cirlce_info">圈子信息</string>
    <string name="circle_info_intro">概况</string>
    <string name="circle_info_informer">通知方</string>
    <string name="circle_info_members">成员</string>
    <string name="circle_info_intro_brief">圈子简介</string>
    <string name="circle_info_intro_owner">圈主</string>
    <string name="circle_menu_share">圈子二维码</string>
    <string name="circle_menu_quit">退出圈子</string>
    <string name="circle_menu_kick">踢出圈子成员</string>
    <string name="circle_menu_edit_intro">编辑概况</string>
    <string name="circle_menu_designate_informer">添加通知方</string>
    <string name="circle_menu_send_notification">发送通知</string>
    <string name="circle_menu_edit_gname">编辑圈子名</string>
    <string name="circle_title_join">扫码加入圈子</string>

    <string name="menu_item_delete_notification">删除通知</string>
    <string name="menu_item_check_profile">查看对方信息</string>
    <string name="menu_item_delete_conversation">删除会话</string>
    <string name="hint_enter_a_message">输入消息</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="pm_title_sample">Tom</string>
    <string name="pm_time_sample">8:00</string>
    <string name="pm_content_sample">How are you.</string>

    <string name="action_settings">Settings</string>

    <string name="letmeknow_host">http://106.15.179.41:8080/letmeknow/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_confirm">再次输入密码</string>
    <string name="sign_in">登录</string>
    <string name="sign_in_short">登录</string>
    <string name="register">注册并登录</string>
    <string name="error_invalid_email">邮箱地址错误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此项是必须的</string>

    <!-- Strings related to couchDB -->
    <string name="err_create_manager">Cannot create manager object</string>
    <string name="err_db_name">Bad database name</string>
    <string name="err_no_db_set">Database not set ! Please create database first.</string>
    <string name="err_no_db">Cannot get database</string>
    <string name="err_db_write">Cannot write document to database</string>
    <string name="err_db_update">Cannot update document</string>
    <string name="err_db_delete">Cannot delete document</string>
    <string name="err_write_attach">Cannot save attachment</string>
    <string name="err_read_attach">Cannot read attachment</string>
    <string name="err_delete_attach">Cannot delete attachment</string>


    <string name="unspport_message_type">暂不支持此消息类型</string>
    <string name="message_is_null">消息不能为空</string>
</resources>
