<?xml version="1.0" encoding="utf-8"?>
<!-- This menu will be attached to activity_circle_profile when a normal circle member is viewing -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_circle_share"
        android:orderInCategory="1"
        android:title="@string/circle_menu_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_circle_send"
        android:orderInCategory="1"
        android:title="@string/circle_menu_send_notification"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_circle_quit"
        android:orderInCategory="1"
        android:title="@string/circle_menu_quit"
        app:showAsAction="never" />
</menu>