<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/AppTheme.AppBarOverlay">


            <LinearLayout
                android:id="@+id/layout_circle_info_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/circle_info_header"
                android:orientation="vertical"
                android:background="@color/colorAccent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_leftarrow"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/back_button_margin"
                        android:layout_marginTop="@dimen/back_button_margin"/>


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_icon_menu"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/back_button_margin"
                        android:layout_marginTop="@dimen/back_button_margin" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:src="@mipmap/ic_launcher_round"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="上海交通台大学软件工程学院"
                        android:layout_marginTop="8dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"/>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TabLayout
                    android:id="@+id/tablayout_circle_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary">

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circle_info_intro" />

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circle_info_informer" />

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circle_info_members" />
                </android.support.design.widget.TabLayout>

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager_circle_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v4.view.ViewPager>
            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
