<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AppTheme.PopupOverlay" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_leftarrow"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_user_portrait"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="25dp"
            android:background="@color/colorWhite"
            android:clickable="true">

            <TextView
                android:id="@+id/text_user_portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/user_info_portrait"
                android:textColor="#000000"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/image_user_portrait"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:src="@mipmap/ic_launcher"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:id="@+id/layout_user_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorWhite"
                android:layout_marginBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/user_info_name"
                    android:textColor="#000000"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/text_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:text="name"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_user_sex"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorWhite"
                android:layout_marginBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/user_info_sex"
                    android:textColor="#000000"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/text_user_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:text="sex"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layout_user_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorWhite"
                android:layout_marginBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/user_info_phone"
                    android:textColor="#000000"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/text_user_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:text="phone"/>

            </RelativeLayout>

        </LinearLayout>


        <Button
            android:id="@+id/button_logoff"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/user_info_logoff"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:background="@color/colorLogoff"/>



    </LinearLayout>

</LinearLayout>